--- a/Kalavale/Kalavale.csproj
+++ b/Kalavale/Kalavale.csproj
@@ -62,7 +62,7 @@
     <Compile Include="AddSurveyForm.designer.cs">
       <DependentUpon>AddSurveyForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LayoutHelper.cs" />
+    <Compile Include="DesignHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
