--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,7 @@ _pkginfo.txt
 
 # Visual Studio cache files
 # files ending in .cache can be ignored
+*.cache
 *.[Cc]ache
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
