--- a/Kalavale/Kalavale.csproj
+++ b/Kalavale/Kalavale.csproj
@@ -62,6 +62,12 @@
     <Compile Include="AddSurveyForm.designer.cs">
       <DependentUpon>AddSurveyForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AnalyzeDataControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AnalyzeDataControl.Designer.cs">
+      <DependentUpon>AnalyzeDataControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,18 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DBHelper.cs" />
+    <Compile Include="ManageDbControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ManageDbControl.Designer.cs">
+      <DependentUpon>ManageDbControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManageSurveysControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ManageSurveysControl.Designer.cs">
+      <DependentUpon>ManageSurveysControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question.cs" />
@@ -76,8 +94,17 @@
     <EmbeddedResource Include="AddSurveyForm.resx">
       <DependentUpon>AddSurveyForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AnalyzeDataControl.resx">
+      <DependentUpon>AnalyzeDataControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageDbControl.resx">
+      <DependentUpon>ManageDbControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageSurveysControl.resx">
+      <DependentUpon>ManageSurveysControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
