--- a/Kalavale/App.config
+++ b/Kalavale/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="ConnString" connectionString="Server=localhost;Database=fishingregister;Uid=root;Pwd='';"/>
+    <add name="MySql" connectionString="Server=localhost;Database=fishingregister;Uid=root;Pwd='';"/>
   </connectionStrings>
 </configuration>
