--- a/Kalavale/Kalavale.csproj
+++ b/Kalavale/Kalavale.csproj
@@ -41,7 +41,7 @@
     <Reference Include="MetroFramework.Fonts, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
       <HintPath>..\packages\MetroModernUI.1.4.0.0\lib\net\MetroFramework.Fonts.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.1.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=6.10.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -56,56 +56,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddSurveyForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AddSurveyForm.designer.cs">
-      <DependentUpon>AddSurveyForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="DesignHelper.cs" />
-    <Compile Include="AnalyzeDataControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="AnalyzeDataControl.Designer.cs">
-      <DependentUpon>AnalyzeDataControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DBHelper.cs" />
-    <Compile Include="ManageDbControl.cs">
+    <Compile Include="UserControls\ManageDbControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ManageDbControl.Designer.cs">
+    <Compile Include="UserControls\ManageDbControl.Designer.cs">
       <DependentUpon>ManageDbControl.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ManageSurveysControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ManageSurveysControl.Designer.cs">
-      <DependentUpon>ManageSurveysControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Question.cs" />
-    <Compile Include="Survey.cs" />
-    <EmbeddedResource Include="AddSurveyForm.resx">
-      <DependentUpon>AddSurveyForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AnalyzeDataControl.resx">
-      <DependentUpon>AnalyzeDataControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ManageDbControl.resx">
+    <EmbeddedResource Include="UserControls\ManageDbControl.resx">
       <DependentUpon>ManageDbControl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ManageSurveysControl.resx">
-      <DependentUpon>ManageSurveysControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -129,6 +100,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
